--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+0.1.3
+    Fixed bug when initializing from empty &str.
+
 0.1.2
     Add 'const' constructor Mown::from_str
     Cleaner inner design
