--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+0.3.0
+    Remove undefined beheviour detected by @mkatychev with miri.
+    Other code clean-up.
+
 0.2.1
     Fixed bug when initializing from empty String.
 
